--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,14 @@
+numpy==1.26.0
+scikit-learn==1.3.2
+scipy==1.12.0
+torch==2.3.1
+torch-geometric==2.0.1
+thinplate==1.0.0
+gpytorch==1.11
+anndata==0.10.4
+matplotlib==3.9.4
+scanpy==1.9.6
+squidpy==1.3.1
+pandas==1.5.3
 sphinx==7.1.2
 sphinx-rtd-theme==1.3.0rc1
