update thinplate req

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,7 +4,7 @@ scipy==1.12.0
 torch==2.3.1
 torch-geometric==2.0.1
 # thinplate==1.0.0
-git+https://github.com/cheind/py-thin-plate-spline.git@v1.0.0
+git+https://github.com/cheind/py-thin-plate-spline.git
 gpytorch==1.11
 anndata==0.10.4
 matplotlib==3.9.4
