--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -10,7 +10,7 @@ anndata==0.10.4
 matplotlib==3.9.4
 scanpy==1.9.6
 squidpy==1.3.1
-pandas==1.5.3
+pandas==2.1.4 # 1.5.3
 ariel-srt==0.1.2
 # for docs
 sphinx==7.1.2
